Feature: Front-end done
Refine the landing page letting Streamlit do more (discarded trying to modify the file uploader section via CSS because it messed up the styling of the container showing the files added), add the email form submission, and add the page where the user will be redirected once the form is filled

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,7 +2,7 @@
 base="light"
 primaryColor="#000000"
 backgroundColor="#eeeeee"
-secondaryBackgroundColor="#a0a0a0"
+secondaryBackgroundColor="#dddddd"
 textColor="#2f3ccf"
 font="sans serif"
 
