Feature: Add cloud storage and styles
The logic to store the files in a Blacbaze database is implemented. Also, remove the sidebar and fix the submit button position. It is now ready to be deployed

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 base="light"
-primaryColor="#000000"
+primaryColor="#2f3ccf"
 backgroundColor="#eeeeee"
 secondaryBackgroundColor="#dddddd"
 textColor="#2f3ccf"
@@ -8,3 +8,6 @@ font="sans serif"
 
 [server]
 maxUploadSize=25
+
+[client]
+showSidebarNavigation = false
